<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/enter_you_price"
            />
        <EditText
            android:id="@+id/edit_text_enter_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#29B6F6"
            android:hint="@string/price"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#000000"
            android:text="@string/enter_email"
            />
        <EditText
            android:id="@+id/edit_text_enter_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#29B6F6"
            android:hint="@string/email"/>
    </LinearLayout>


    <Button
        android:id="@+id/button_comple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_button_complete"
        android:background="#29B6F6"
        android:textColor="#FFFFFF"/>

    </LinearLayout>